--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
+    "clean-css": "^4.2.3",
     "gatsby": "^2.21.21",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-manifest": "^2.4.2",
